# ENGR_491_Programming_Assignments

./: CMakeLists.txt  PCA.py
LED_Finder/: CMakeLists.txt  LED_Finder.cpp
PCA_Viewer/: CMakeLists.txt  PCA_Tracker.cpp  PCA_Tracker.h  PCA_Viewer.cpp
common_library/: CMakeLists.txt  Frequency_Detector.cpp  Frequency_Detector.hpp  PCA_Tracker.cpp  PCA_Tracker.hpp
data/: LED_4_Slow_Clean.aedat4  LED_4_Slow_Dirty.aedat4
src/: PCA.cpp
